# hft-platform

./: README.md  main,py  requirements.txt
backtesting/: backtester.py  strategy.py
config/: config.yaml
data_acquisition/: data_processor.py  data_stream.py
fix_integration/: config.yaml  fix_client.py  fix_session.py
order_execution/: CMakeLists.txt  order_executor.cpp  python_bindings.py
predictive_modeling/: model.py  trainer.py  utils.py
utils/: helpers.py  logger.py
